--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "3.1.x",
     "coffee-script": "~> 1.6.3",
     "cors": "~2.1.0",
-    "mongodb": "~1.3.19"
+    "mongodb": "~1.3.19",
+    "underscore": "~1.5.2"
   },
   "engines": {
     "node": "0.10.x",
